# banco_operacoes_fastapi_api

./: README.md  alembic.ini  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 00d46bc90306_criando_a_tabela_transações.py  9716b9bdfda1_atualizando_create_at.py
src/: database.py  models.py  rotas.py  schemas.py  service.py
