
[tool.poetry]
name = "banco-operacoes-fastapi-api"
version = "0.1.0"
description = ""
authors = ["Soilenyis <soilenyis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
sqlalchemy = "^2.0.24"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.1.0"
alembic = "^1.13.1"
pydantic = "^2.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
